criacao dos inputs de login e cadastro

--- a/aula10/ex007.html
+++ b/aula10/ex007.html
@@ -25,8 +25,8 @@
     <div id="res">RESULTADO:</div>
 
     <script>
-        var n1 = window.document.getElementById('txtn1')
-        var n2 = window.document.querySelector('input#txtn2')
+        //var n1 = window.document.getElementById('txtn1')
+        //var n2 = window.document.querySelector('input#txtn2')
 
         function somar(){
             var v1 = window.document.getElementById('txtn1')
