--- a/pratica/cadastro.html
+++ b/pratica/cadastro.html
@@ -7,17 +7,20 @@
     <title>Portal de Cadastro</title>
 </head>
 <body>
-    <h1>Cadastro</h1>
-    <label for="formname">Nome:</label><br>
-    <input type="text" id="txtname" size="30" class="inputs"><br>
-    <label for="formemail">E-mail:</label><br>
-    <input type="email" id="txtemail" size="30" class="inputs"><br>
-    <label for="formsenha">Senha:</label>
-    <input type="password" id="txtsenha" size="20" class="inputs"><br>
-    <label for="formconfirmsenha">Confirmar senha:</label>
-    <input type="password" id="txtconfirsenha" size="20" class="inputs"><br>
-    <input type="button" value="Cadastrar" class="botao"><br>
-    <a href="index.html" class="botao_orientacao">Voltar</a>
+    <div class="corpo">
+        <h1>Cadastro</h1>
+        <label for="formname">Nome:</label><br>
+        <input type="text" id="txtname" size="50" class="inputs"><br>
+        <label for="formemail">E-mail:</label><br>
+        <input type="email" id="txtemail" size="50" class="inputs"><br>
+        <label for="formsenha">Senha:</label>
+        <input type="password" id="txtsenha" size="30" class="inputs"><br>
+        <label for="formconfirmsenha">Confirmar senha:</label>
+        <input type="password" id="txtconfirsenha" size="30" class="inputs"><br>
+        <input type="button" value="Cadastrar" class="botao"><br>
+        <a href="index.html" class="botao_orientacao">Voltar</a>
+    </div>
+
     <script>
         var nomecadastrado = window.document.querySelector('input#txtnome')
         var emailcadastrado = window.document.querySelector('input#txtemail')
