--- a/pratica/index.html
+++ b/pratica/index.html
@@ -7,15 +7,16 @@
     <title>Teste de Condicionais</title>
 </head>
 <body>
-    <h1>Painel de Controle</h1>
-    <label for="formname">E-mail:</label><br>
-    <input type="email" name="txtemail" id="txtemail" size="50" class="inputs"><br>
-    <label for="formsenha">Senha:</label><br>
-    <input type="password" name="txtsenha" id="txtsenha" class="inputs" size="50"><br>
-    <input type="button" value="Entrar" class="botao" id="btnEntrar">
-    <br>
-    <p id="mensagem">Não tem cadastro? <a href="cadastro.html" class="botao_orientacao">Cadastrar-se</a></p>
-
+    <div class="corpo">
+        <h1>Painel de Controle</h1>
+        <label for="formname">E-mail:</label><br>
+        <input type="email" name="txtemail" id="txtemail" size="50" class="inputs"><br>
+        <label for="formsenha">Senha:</label><br>
+        <input type="password" name="txtsenha" id="txtsenha" class="inputs" size="50"><br>
+        <input type="button" value="Entrar" class="botao" id="btnEntrar">
+        <br>
+        <p id="mensagem">Não tem cadastro? <a href="cadastro.html" class="botao_orientacao">Cadastrar-se</a></p>
+    </div>
     <script>
         var buttonentrar = window.document.getElementById('btnEntrar')
         buttonentrar.addEventListener('click', entrar)
