validação de admin admin resolvido

--- a/pratica/cadastro.html
+++ b/pratica/cadastro.html
@@ -9,15 +9,17 @@
 <body>
     <div class="corpo">
         <h1>Cadastro</h1>
-        <label for="formname">Nome:</label><br>
-        <input type="text" id="txtname" size="50" class="inputs"><br>
-        <label for="formemail">E-mail:</label><br>
-        <input type="email" id="txtemail" size="50" class="inputs"><br>
-        <label for="formsenha">Senha:</label>
-        <input type="password" id="txtsenha" size="30" class="inputs"><br>
-        <label for="formconfirmsenha">Confirmar senha:</label>
-        <input type="password" id="txtconfirsenha" size="30" class="inputs"><br>
-        <input type="button" value="Cadastrar" class="botao"><br>
+        <form id="frm_Cadastro">
+            <!--<label for="formname">Nome:</label><br>-->
+            Nome: <input type="text" id="txtname" size="50" class="inputs"><br>
+            <!--<label for="formemail">E-mail:</label><br>-->
+            E-mail: <input type="email" id="txtemail" size="50" class="inputs"><br>
+            <!--<label for="formsenha">Senha:</label>-->
+            Senha: <input type="password" id="txtsenha" size="30" class="inputs"><br>
+            <!--<label for="formconfirmsenha">Confirmar senha:</label>-->
+            Confirmar senha: <input type="password" id="txtconfirsenha" size="30" class="inputs"><br>
+            <input type="button" value="Cadastrar" class="botao"><br>
+        </form>
         <a href="index.html" class="botao_orientacao">Voltar</a>
     </div>
 
