Commit exercicio final concluído.

--- a/aula16ex/modelo.html
+++ b/aula16ex/modelo.html
@@ -19,8 +19,11 @@
             </p>
         </div>
         <div>
-            <select name="slclist" id="slclist" size="10"></select>
-            <input type="button" value="Finalizar" onclick="finalizar()">
+            <select name="slclist" id="slclist"></select>
+            <p>
+                <input type="button" value="Finalizar" onclick="finalizar()">
+            </p>
+            <p id="res"></p>
         </div>
     </section>
     <footer>
